# lc0-cf

./: .gitignore  .gitmodules  AGENTS.md  CHESSFORMER.md  README.md
.github/workflows/: foursight-ci.yml
foursight/: DEVELOPMENT_PLAN.md  README.md  pyproject.toml
foursight/config/: settings.example.toml
foursight/foursight/: __init__.py  cli.py  compare.py  config.py
foursight/foursight/engines/: __init__.py  base.py  leela_cf.py  maia3.py  mock.py  registry.py
foursight/foursight/game_theory/: __init__.py  spec.py  worst.py
foursight/foursight/ingest/: __init__.py  actual.py  lichess.py
foursight/foursight/market/: __init__.py  compare.py  records.py  synthesis.py  trend_net.py
foursight/foursight/market/ingest/: __init__.py  kalshi.py  polymarket.py
foursight/foursight/metrics/: __init__.py  aggregate.py
foursight/scripts/: setup_engines.sh
foursight/tests/: test_actual_ingest.py  test_compare.py  test_engines_live.py  test_engines_mock.py  test_game_theory.py  test_lichess_ingest.py  test_market_compare.py  test_market_ingest.py  test_market_records.py  test_market_synthesis.py  test_metrics.py
foursight/tests/fixtures/: two_games.pgn
scripts/: setup-maia3.sh
