[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foursight"
version = "0.0.0"
description = "4sight (Maia v2) — four-sight optimal/human/actual/worst comparison; chess proving ground + market engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "4sight" }]
dependencies = [
    "chess>=1.11",
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=14",
    "pydantic>=2.5",
    "typer>=0.12",
]

[project.scripts]
foursight = "foursight.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["foursight"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.ruff.lint.per-file-ignores]
# Typer intentionally uses function calls (Option/Argument) as defaults.
"foursight/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
